<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_news_title" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_history_title" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_data_title" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_info_title" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about_title" />
    </group>

</menu>
