<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.java.coronanews.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|snap|enterAlways|enterAlwaysCollapsed">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:background="@drawable/setting_bg"
                android:layout_height="256dp"
                android:scaleType="centerCrop" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/setting_view"
            android:textColor="@color/colorDetail"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switch_news"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_night"
                    android:drawablePadding="8dp"
                    android:text="@string/action_news"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorBackground" />

                <Switch
                    android:id="@+id/switch_paper"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_text"
                    android:drawablePadding="8dp"
                    android:text="@string/action_paper"
                    android:textColor="@color/colorText"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/setting_other"
            android:textColor="@color/colorDetail"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_clear"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:drawableLeft="@drawable/ic_clear"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/action_clean"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>